force-app/main/default/objects/Form__c/Form__c.object-meta.xml
<CustomObject>
    <description>Generic government form submitted within a Case. Record type identifies which form (e.g. QFR Labour Cost and Hours). Holds form-level status and QA verdict; variable data lives in child Form Line Items.</description>
    <label>Form</label>
    <pluralLabel>Forms</pluralLabel>
    <nameField>
        <displayFormat>FORM-{00000}</displayFormat>
        <label>Form Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>