force-app/main/default/objects/Form__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName><label>Case</label><type>Lookup</type>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Forms</relationshipLabel>
    <relationshipName>Forms</relationshipName>
    <description>The QFR submission (Case) this form belongs to.</description>
</CustomField>