force-app/main/default/objects/Form__c/fields/Form_QA_Notes__c.field-meta.xml
<CustomField>
    <fullName>Form_QA_Notes__c</fullName><label>Form QA Notes</label><type>LongTextArea</type><length>32768</length><visibleLines>6</visibleLines>
</CustomField>