force-app/main/default/objects/Form__c/fields/Form_QA_Verdict__c.field-meta.xml
<CustomField>
    <fullName>Form_QA_Verdict__c</fullName><label>Form QA Verdict</label><type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Pass</fullName><default>false</default><label>Pass</label></value>
        <value><fullName>Flag</fullName><default>false</default><label>Flag</label></value>
        <value><fullName>Fail</fullName><default>false</default><label>Fail</label></value>
    </valueSetDefinition></valueSet>
</CustomField>