force-app/main/default/objects/Form__c/fields/Form_Status__c.field-meta.xml
<CustomField>
    <fullName>Form_Status__c</fullName><label>Form Status</label><type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Draft</fullName><default>true</default><label>Draft</label></value>
        <value><fullName>Submitted</fullName><default>false</default><label>Submitted</label></value>
        <value><fullName>Under Review</fullName><default>false</default><label>Under Review</label></value>
        <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
        <value><fullName>Returned</fullName><default>false</default><label>Returned</label></value>
    </valueSetDefinition></valueSet>
</CustomField>