force-app/main/default/objects/Form__c/fields/Form_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Type__c</fullName><label>Form Type</label><type>Text</type><length>100</length>
    <description>Logical form type, e.g. Labour Cost and Hours. Usually mirrors the record type.</description>
</CustomField>