force-app/main/default/objects/Form__c/recordTypes/Care_Minutes.recordType-meta.xml
<RecordType>
    <fullName>Care_Minutes</fullName>
    <active>true</active>
    <label>Care Minutes</label>
    <description>QFR Care Minutes form - actual care minutes vs mandated targets.</description>
</RecordType>