force-app/main/default/objects/Form__c/recordTypes/Labour_Cost_Hours.recordType-meta.xml
<RecordType>
    <fullName>Labour_Cost_Hours</fullName>
    <active>true</active>
    <label>Labour Cost and Hours</label>
    <description>QFR Residential Care Labour Costs and Hours form.</description>
</RecordType>