force-app/main/default/objects/Form__c/recordTypes/QA_Declaration.recordType-meta.xml
<RecordType>
    <fullName>QA_Declaration</fullName>
    <active>true</active>
    <label>QA Declaration</label>
    <description>QFR declaration form - yes/no attestations and free-text declarations.</description>
</RecordType>